Add chapter 12 and 13 pictures

--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -18,6 +18,11 @@
 
 \infobox{Адно з~маштабных дасьледаваньняў паказала, што пазьбяганьне сонца павялічвае рызыку сьмерці амаль на 72\,\% і паводле шкоды бадай супастаўнае з~курэньнем.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.3]{willpower/ch12/1.pdf}
+\end{figure}
+
 У адным з~дасьледаваньняў было паказана, што ультрафіялет зьніжае атлусьценьне і прыкметы мэтабалічнага сындрому незалежна ад вітаміну D. У экспэрымэнце працяглае субэрытэмнае апраменьваньне ультрафіялетам прыводзіла да зьніжэньня вагі, паляпшэньня глюкозаталерантнасьці, павышэньня адчувальнасьці да інсуліну, зьмяншэньня прыкметаў тлушчавага гепатозу печані, зьніжэньня узроўняў нашчавага інсуліну, глюкозы і халестэрыну. Аўтары падкрэсьліваюць, што большасьць станоўчых эфэктаў сьвятла не аднаўлялася дадаткамі вітаміну D.
 
 \subsection*{Пытаньні і заданьні}
@@ -54,6 +59,11 @@
 \emph{Колькасьць атрыманага ўльтрафіялету вымяраюць у~мінімальных эрытэмных дозах, то бок яго колькасьці, неабходнай для ледзь прыкметнага пачырваненьня скуры. У год для падтрыманьня ўзроўню вітаміну D дастаткова ўсяго 50--60 эрытэмных дозаў. 1 эрітемной доза = 25.000 МЕ вітаміну D. Мінімум сонца~--- гэта чвэрць эрытэмнай дозы: ад 5 да 30 хвілін у~залежнасьці ад геаграфіі, 6--7 раз у~тыдзень на твар, рукі, ногі, з~10:00 да 15:00 у~сярэдніх шыротах.}
 
 Як бачыце, для атрыманьня вітаміну D згараць зусім неабавязкова. Праўда, з~сонцам у~зімовыя месяцы будзе крыху цяжкавата.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.2]{willpower/ch12/2.pdf}
+\end{figure}
 
 \textbf{Дадаткі вітаміну D.} Калі ваш узровень вітаміну D ніжэй за 30 НГ / мл і вы ня можаце атрымаць дастатковую колькасьць сонца, то ёсьць сэнс прымаць яго дабаўкі. Для прафіляктыкі гіпавітамінозу D у~зімовы час, магчыма, таксама варта ўжываць яго ў~дадатках (але ня больш за 2000 МЕ у~дзень) і хаця б раз у~год вымяраць яго ўзровень у~плазьме крыві. Вітамін D, выпрацаваны ў~скуры, не распадаецца прынамсі ўдвая даўжэй, чым вітамін D у~дадатках. Перадазіроўка вітаміну D за кошт сонечных прамянёў немагчымая. Акрамя сонца і дабавак, невялікія колькасьці вітаміну D можна атрымліваць з~тлустай марской рыбай. Фізычная актыўнасьць павялічвае мабілізацыю вітаміну D з~тлушчу. Але сонца~--- гэта нашмат больш, чым вітамін D. І замяніць сонца дадаткам немагчыма. Давайце разьбяромся, якія ж ключавыя мэханізмы карыснага дзеяньня сонца.
 
@@ -103,6 +113,11 @@
 \textbf{Важна пазьбягаць залішняга ультрафіялету, бо пашкоджаньні скуры назапашваюцца паступова і могуць выявіцца толькі ў~старасьці.}
 
 У прагнозе надвор'я паказваюць \textbf{ультрафіялетавы індэкс}, больш высокія значэньні якога небясьпечныя сонечнымі апёкамі і пашкоджаньнем скуры і вачэй. На колькасьць ультрафіялету ўплываюць розныя фактары: воблачнасьць, смуга, таўшчыня азонавага пласта (чым ён танчэйшы, тым больш ультрафіялету пранікае). Чым вышэй індэкс, тым менш варта быць на сонца.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch12/3.pdf}
+\end{figure}
 
 \textbf{Паступова павялічвайце час знаходжаньня на сонцы.} Не загарайце падоўгу, асабліва калі да гэтага вы доўга не былі на сонцы. Патроху і плыўна павялічвайце працягласьць сонечных ваннаў. Рэзка згарэць, прыехаўшы ў~адпачынак,~--- гэта вельмі шкодна для скуры і здароўя ў~цэлым. Сонечныя апёкі павялічваюць рызыку мэляномы скуры ў~два разы. Рэгулярная гадзіна загару ў~дзень~--- для пачатку цалкам дастаткова, а~ў гарачых краінах вам хопіць і паўгадзіны.
 
@@ -166,6 +181,11 @@
 Вылучаюць два спосабы цеплаўтварэньня: скарачальны тэрмагенэз: калоціць, дрыжыць, «зуб зуба паганяе», пры якім цеплаўтварэньне абумоўлена скарачэньнямі шкілетных цягліц (прыватны выпадак~--- халадовая цяглічная дрыготка); нескарачальны тэрмагенэз~--- праца бурай тлушчавай тканкі.
 
 Пры дрыготцы выпрацоўка цяпла ўзрастае больш чым у~тры разы, а~пры інтэнсіўнай фізычнай працы~--- у~дзесяць і болей разоў.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch12/4.pdf}
+\end{figure}
 
 Разумовая і фізычная актыўнасьць павялічваюцца пры павышэньні тэмпэратуры цела і зьмяншаюцца, калі халодна. Спартоўцы ведаюць, што «разаграваньне» павышае вынікі, а~навукоўцы ўсталявалі, што інтэнсіўныя прысяданьні могуць узбадзёрыць ня горш за кафэін. Пры захворваньні арганізм сам павышае тэмпэратуру, каб больш эфэктыўна змагацца з~хваробай: калі вы будзеце зьбіваць тэмпэратуру, калі яна павышана нязначна і нармальна пераносіцца, гэта перашкодзіць нармальнаму імуннаму адказу!
 
@@ -235,6 +255,11 @@
 \emph{Холад суправаджае Амэга-3 тлустыя кіслоты з~самага пачатку іх сынтэзу~--- іх вырабляюць асаблівыя дыятомавыя водарасьці, якія растуць у~халодных і чыстых водах. Сынтэзуюцца яны з~тае прычыны, што ў~холадзе трэба падтрымліваць аптымальную глейкасьць клеткавых мэмбранаў. А вось цёплыя і каламутныя воды пераважна насяляюць сіне-зялёныя водарасьці, якія не валодаюць такой здольнасьцю, вось чаму ў~рачной рыбе вельмі мала Амэга-3.}
 
 Навуковыя дасьледаваньні паказваюць прыкметны ўплыў Амэга-3 на халадовую ўстойлівасьць, прычым адразу па некалькіх мэханізмах, уключаючы прамы ўплыў на бэжавы і буры тлушч. Амэга-3 зьвязваецца з~рэцэптарам GPR120, што прыводзіць да выдзяленьня гармону FGF21, які ўзмацняе выпрацоўку цяпла ў~тлушчавай тканцы.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch12/5.pdf}
+\end{figure}
 
 \textbf{Сьвятло.} Лішак штучнага сьвятла ўвечары і ўначы можа блякаваць працу бурага тлушчу, гэтак жа як і ўжываньне бэта-блякатараў і дрэнная праца шчытавіцы. У дасьледаваньнях паказана, што ў~мышэй, якіх доўга трымалі на сьвятле, назапашвалася на 25--50\,\% больш тлушчу, хоць іх кармілі аднолькава. Чым сьвятлей у~вас у~спальні ўначы, тым вышэйшая рызыка атлусьценьня!
 
@@ -317,6 +342,11 @@
 Звужэньне бактэрыяльнай разнастайнасьці~--- гэта кара нашага часу. Яно адбываецца кумулятыўна: чым меншая разнастайнасьць у~бацькоў, тым меншая будзе ў~іх дзяцей. Мы паступова губляем многія штамы бактэрыяў, якія былі ў~арганізьме людзей дзясяткі тысячаў гадоў. Паляпшэньне экалёгіі і апрацоўка ежы, выкарыстаньне мыйных сродкаў, антысэптыкаў, памяншэньне кантакту з~глебай, строгія санітарныя стандарты~--- усё гэта прыводзіць да драматычнага памяншэньня колькасьці бактэрыяў, якія маглі б узбагаціць нашу мікрафлёру. Памяншэньне разнастайнасьці харчаваньня і колькасьці расьліннай ежы ў~рацыёне, павелічэньне колькасьці мяса і тлушчу, рафінаваных прадуктаў, скарачэньне колькасьці харчовых валокнаў~--- усё гэта пазбаўляе нашу мікрафлёру харчаваньня, зьніжаючы яе разнастайнасьць.
 
 \infobox{Чым меншая разнастайнасьць, тым горшая ўстойлівасьць добрых бактэрыяў да ўкараненьня чужародных і небясьпечных.}
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch12/6.pdf}
+\end{figure}
 
 \textbf{Ужываньне антыбіётыкаў} спустошвае мікрабіем, прычым нават аднаразовы курс можа прывесьці да зьніжэньня разнастайнасьці. Калі вы не ўжываеце антыбіётыкі для лячэньня, яны ўсё роўна могуць трапляць да вас у~арганізм зь мясам, яйкамі і малаком, бо 70\,\% антыбіётыкаў у~сусьветнай гаспадарцы вырабляецца для жывёлагадоўлі. Нэгатыўна ўзьдзейнічаць на мікрафлёру могуць і іншыя прэпараты, ад тых, што зьніжаюць кіслотнасьць страўніка, да антыдэпрэсантаў, а~таксама многія харчовыя дабаўкі, ад загушчальнікаў да цукразаменьнікаў. Лішак алькаголю, цукру, пераяданьне пагаршаюць склад мікрафлёры.
 
@@ -416,6 +446,11 @@
 
 \infobox{Тут некалькі эфэктаў: просты візуальны антыстрэсавы эфэкт ад разглядваньня зеляніны, зьніжэньне паветранага забруджаньня, зьніжэньне роўню шуму, больш за ўмоваў для фізычнай актыўнасьці й ня толькі.}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch12/7.pdf}
+\end{figure}
+
 \textbf{Пагуляйце па лесе.} Дабратворны ўплыў прагулак па лесе або парку на стан здароўя чалавека пачаў вывучацца як навуковы фэномэн з~80-х гадоў XX стагодзьдзя. Калі раней людзі проста бралі заплечнік і сыходзілі ў~паход, цяпер прыдумалі больш адмысловых тэрмінаў. Першымі тут былі японцы, якія ўвялі тэрмін сінрын-ёку~--- ``лясныя ванны'', цяпер кажуць пра ``дэндратэрапію'', ``спа-лес'', Park Rx і інш. Можна выдатна спалучаць дзелавую сустрэчу, чытаньне або шпацыр з~дзецьмі ў~парку. Гэта станоўча ўзьдзейнічае на ваш мозг і ваша цела, не патрабуе напругі і заўсёды даступна.
 
 \emph{Як заўважыў пісьменьнік Робэрт Стывэнсан, «Лес чаруе сэрцы людзей ня столькі сваёй прыгажосьцю, колькі цудоўным паветрам, эманацыяй старых дрэваў, нечым няўлоўным, што так цудоўна зьмяняе і аднаўляе стомлены дух».}
@@ -456,6 +491,11 @@
 
 
 \section{Узбагачанае асяродзьдзе}
+
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[scale=1.2]{willpower/ch12/8.pdf}
+\end{figure*}
 
 Калі пакласьці агурок у~расол, то ён стане салёным сам па сабе, без прымусу. Так і чалавек, зьмешчаны ва ўзбагачанае асяродзьдзе, становіцца разумнейшым, здаравейшым і жыве даўжэй, больш устойлівы да стрэсу. Узбагачанае асяродзьдзе~--- гэта адзін з~самых недаацэненых інструмэнтаў здароўя, у~тым ліку і грамадзкага.
 
@@ -505,3 +545,9 @@
 
 3. Трэніруйце свой мозг гульнёй: паежце з~заплюшчанымі вачыма, разьвівайце нюх у~парфумэрнай краме або квяцярні, развучыце новы танец або верш на памяць.
 
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.5in}
+  \includegraphics[width=\textwidth]{willpower/ch12/full.pdf}  
+\end{figure}
