--- a/willpower/chapter13.tex
+++ b/willpower/chapter13.tex
@@ -24,6 +24,11 @@
 
 Зразумела, ня варта дэманізаваць смартфоны, як і праклінаць гамбургеры з~малочнымі кактэйлямі. Смартфон~--- гэта самая важная рэч з~тых, што заўсёды з~намі, і ён сапраўды добра дапамагае. Як правіла, размовы аб тым, што смартфон робіць нас тупымі~--- гэта перабольшаньне, аднак шэраг важных заўваг усё ж такі ёсьць. Цяпер мы ня можам сказаць, колькі часу~--- норма, а~колькі~--- ужо залежнасьць, але калі ёсьць зьніжэньне якасьці жыцьця праз злоўжываньне смартфонам, то ёсьць і праблема.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch13/1.pdf}
+\end{figure}
+
 \subsection*{Пабочныя эфэкты}
 
 Яны ёсьць заўсёды і ад усяго. Таму, як і з~харчаваньнем, трэба адсочваць свой рэжым і рацыён узаемадзеяньня са смартфонам. Замест вядзеньня харчовага дзёньніка дастаткова ўсталяваць праграмы (Quality Time BreakFree, Moment для iOS і інш.), якія адзначаюць, колькі разоў вы карыстаецеся тэлефонам і сумарны час выкарыстаньня, а~ў сваім дзёньніку адзначайце ваша самаадчуваньне.
@@ -73,6 +78,11 @@
   \item \textbf{празьмерная прыярытэзацыя}: калі вы седзіце ў~інтэрнэце на шкоду вашым асноўным справам, працы, сям'і і да т.~п.
 \end{itemize}
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch13/2.pdf}
+\end{figure}
+
 Вялікая колькасьць праведзенага ў~фэйсбуку, інстраграме і твітары часу была зьвязаная з~сымптомамі дэпрэсіі: страта задавальненьня, пачуцьцё безнадзейнасьці, віны і да т.~п. Узаемасувязь паміж выкарыстаньнем смартфона і дэпрэсіяй дастаткова складаная, наўрад ці менавіта тэлефон выклікае дэпрэсію, а~вось дэпрэсія, як правіла, можа выяўляцца павелічэньнем працягласьці часу выкарыстаньня смартфона.
 
 \textbf{З розных відаў лічбавай актыўнасьці толькі сацыяльныя сеткі і тэлевізар карэлююць з~рызыкай дэпрэсіі, а~вось звычайны інтэрнэт-сэрфінг і відэагульні ніяк з~дэпрэсіяй не зьвязаныя.}
@@ -84,6 +94,11 @@
 Важны пабочны \textbf{эфэкт сацыяльных сетак~--- гэта страта самакантролю}. Чым больш чалавек праводзіць часу ў~сацсетках, тым часьцей пад'ядае, горш кантралюе фінансавыя выдаткі і да т.~п. Чым больш увагі выдаткоўваеце анляйн, тым менш у~вас застаецца для кантролю ўласных імпульсаў. Чым больш чалавек лайкае чужыя пасты, тым горш ён сябе адчувае і мацней схільны да атлусьценьня.
 
 \textbf{Адмова або абмежаваньне} выкарыстаньня сацыяльных сетак вызваляе людзям каля адной гадзіны ў~дзень: яны больш камунікуюць, маюць менш радыкальныя палітычныя погляды, у~іх павялічваецца настрой і адчуваньне задавальненьня ад жыцьця. Нават часовая адмова ад сацсетак, паводле дасьледаваньняў, зьмяншае пачуцьцё прыгнечанасьці, павялічвае прадуктыўнасьць, зьмяншае імпульсіўнасьць, пераяданьне.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch13/3.pdf}
+\end{figure}
 
 \subsection*{Сацыяльны ўплыў}
 
@@ -108,6 +123,12 @@
 Калі мы трымаем тэлефон у~руках, мы глядзім на яго, апусьціўшы галаву ўніз. Куды скіраваны ваш погляд, туды ідзе і галава. А куды зьвернутая галава, туды і ўсе цягліцы цела. Таму калі вы гледзіце ўніз, то вы будзеце горбіцца. З гравітацыяй нашы цягліцы змагаюцца прыгожа, але ж цяпер больш актуальная іншая праблема~--- смартфон. Калі вы гледзіце на экран, то моцна нахіляеце галаву і падымаеце плечы. Гэтую зьяву назвалі «\textbf{тэкставая шыя}» (text neck).
 
 \textbf{Чаму гэта важна?} Чалавечая галава важыць каля 5 кг. Але калі мы нахіляем яе, вага на шыйным аддзеле хрыбта пачынае ўзрастаць. Пад вуглом у~15 градусаў гэтая вага складае каля 12 кіляграмаў, у~30 градусаў~--- 18 кг, у~45 градусаў~--- 22 кг, у~60 градусаў~--- гэта ўжо 27 кг. ``Тэкставая шыя'' прыводзіць да хранічнага запаленьня і наступнай дэфармацыі, зьмяняючы натуральны выгін шыі і ўплываючы на іншыя важныя функцыі, уключаючы кровазабесьпячэньне галаўнога мозгу. Навукоўцы на рэнтгенаўскіх здымках выявілі, што рогападобныя ўтварэньні на задняй паверхні шыі ёсьць у~30\,\% людзей ад 18 да 36 гадоў: чым старэйшы чалавек, тым меншая верагоднасьць наяўнасьці ``рогу''. Такі рог~--- гэта адлюстраваньне фэномэну ``тэкставай шыі'', то бок хранічнай напругі і боляў у~вобласьці галавы і шыі.
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch13/4.pdf}\qquad
+  \includegraphics[scale=1.5]{willpower/ch13/5.pdf}
+\end{figure}
 
 \emph{Зладзім экспэрымэнт. Прыслухайцеся да тонусу цягліц. Як толькі вы сагняце галаву, то аўтаматычна ўзьнікне павелічэньне тонусу цягліц пярэдняга боку цела і жаданьне сагнуць канцавіны. А калі вы падыміце галаву, то павялічыцца тонус цягліцаў-разгінальнікаў задняй паверхні цела. Паспрабавалі?}
 
@@ -189,6 +210,11 @@
 \infobox{Навык нерэагаваньня дапамагае нам не запускаць асацыятыўную працу розуму, калі мы на нешта глядзім ці атрымліваем новую інфармацыю.}
 
 Існуе \textbf{содневы ліміт інфармацыі}, якую наш мозг можа перастрававаць за дзень бяз шкоды для сябе, і мы павінны сьвядома сачыць за тым, што спажываем у~інфармацыйным асяродзьдзі. Інфармацыя не інэртная~--- яна мяняе нас, таму інфармацыйная гігіена вельмі важная. Неабходна дзейнічаць папераджальна, пазьбягаючы ўзьдзеяньня шкоднай інфармацыі і старанна адбіраючы самае лепшае: не душыцеся інфармацыйным фастфудам на хаду!
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch13/6.pdf}
+\end{figure}
 
 \emph{«Калі вы павялічваеце працэнт спажываньня агульнадаступнай інфармацыі, вынік вашай разумовай дзейнасьці наўрад ці зможа прэтэндаваць на арыгінальнасьць. Ашалелае імкненьне да стварэньня першапачаткова ёсьць практычна ва ўсіх, проста ў~мяне яно засталося па меры сталеньня і не было выціснутае псэўдакаштошнасьцямі грамадзтва спажываньня. Магчыма, таму што я захоўваў галаву ў~чысьціні: не глядзеў тэлевізар, не чытаў газэтаў, не прымаў на веру меркаваньне аўтарытэтаў». Павел Дураў, стваральнік Вконтакте і Тэлеграм.} 
 
@@ -306,6 +332,11 @@
 
 \emph{Ёсьць анекдот: муж пытаецца ў~жонкі: «Чаму ты ўвесь час глядзіш кулінарныя кнігі, але нічога не гатуеш?~--- Ты таксама ўвесь час глядзіш порна, і таксама нічога не адбываецца».}
 
+\begin{figure*}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch13/7.pdf}
+\end{figure*}
+
 \textbf{Фуд-порна}~--- здымка ежы буйным плянам, фота ці відэа, са спэцыяльнымі эфэктамі, з~мэтай выклікаць узбуджэньне ў~чалавека. Навукова даведзена, што выявы ежы вельмі моцна ўзьдзейнічаюць на нашу фізыялёгію і актыўнасьць мозгу: разгляданьне малюнкаў можа выклікаць голад і жаданьне есьці ў~цалкам сытага здаровага чалавека. Фуд-порна~--- гэта калі важная не карысьць, смак ці склад, а~менавіта прывабнасьць, апэтытнасьць. Такія гіпэррэалітычныя кадры, яркія і агрэсіўныя, прыцягваюць нашу ўвагу і стымулююць апэтыт.
 
 \emph{Цікава, што рост папулярнасьці фота ежы і кулінарных шоў прапарцыйны зьніжэньню часу гатаваньня і павелічэньню ўжываньня паўфабрыкатаў.}
@@ -359,6 +390,12 @@
 
 \textbf{Сацыяльныя сеткі.} Сацыяльныя сеткі дапамагаюць нам падтрымліваць вялікую колькасьць сацыяльных сувязей, мець зносіны з~важнымі для нас людзьмі. Навукоўцы адзначылі, што для павышэньня ўзроўню шчасьця чалавеку трэба атрымаць 60 цёплых камэнтароў у~месяц, таму і самі ня сквапцеся на кампліменты. Адпішыцеся ад тых, хто крадзе вашу ўвагу і час, пакіньце сяброў, якія даюць якасны кантэнт, карысны для прыняцьця рашэньняў і ўвасабленьня іх у~жыцьцё.
 
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch13/8.pdf}\qquad
+  \includegraphics[scale=1.5]{willpower/ch13/9.pdf}
+\end{figure}
+
 Пакідайце разгорнутыя камэнтары да цікавых для вас тэмаў, узаемадзейнічайце з~аднадумцамі. Ніколі не выказвайцеся рэзка, нікога не крытыкуйце, нават у~асабістых паведамленьнях. Памятайце, што ўсё напісанае і сказанае можа стаць публічным, таму выконвайце лічбавую бясьпеку. Не захоўвайце важныя дакументы, дадзеныя карт, інтымныя фота ў~ненадзейных агульнадаступных сховішчах дадзеных. Не публікуйце асабістую інфармацыю~--- гэта можа быць выкарыстана супраць вас.
 
 \textbf{Мэтанакіраванае выкарыстаньне.} Смартфон~--- гэта ``соска для дарослых'', так жартуюць дзеці. Навучыцеся адрозьніваць, калі вы бераце тэлефон для вырашэньня канкрэтнай задачы, а~калі ад нуды. «Што я зараз зьбіраюся рабіць і колькі часу на гэта патрачу?»~--- пытайце і адказвайце шчыра. Калі ваш адказ ``нуда'' ці ``стрэс'', то знаходзьце больш здаровыя забаўкі і спосабы для зьніжэньня стрэсу. Прыцягвайце да лічбавага дэтоксу і сяброў, напрыклад, дамоўцеся пры сустрэчы скласьці ўсе тэлефоны ў~адну скрынку на стале.
@@ -372,6 +409,13 @@
 \textbf{Ускладніце доступ}~--- напрыклад, увядзіце ручны набор доўгага пароля да праграмаў, стварыце тэчкі для праграмаў і схавайце іх далей. Разьмяжуйце месэнджэры для дома і для працы. Напрыклад, у~адным мэсэнджэры вы можаце чытаць падпіскі, працаваць у~другім, мець зносіны зь сябрамі ў~трэцім. Па такім жа прынцыпе вы можаце выкарыстоўваць розныя браўзэры як у~смартфоне, так і на хатнім кампутары. Калі ў~вас прафэсійная неабходнасьць быць у~шматлікіх мэсэнджарах ці сацсетках, завядзіце для іх асобны смартфон, які ня трэба заўсёды і ўсюды браць з~сабой.
 
 Адключыце ўсе апавяшчэньні ад праграмаў, акрамя канала сувязі з~блізкімі. Для зьніжэньня візуальнай нагрузкі вы можаце выкарыстоўваць пастаянны рэжым ``вячэрняга экрана'' або чорна-белы рэжым для меншага адцягненьня, самы радыкальны спосаб~--- гэта e-ink экраны, якія не выпраменьваюць сьвятло, яны прыцягваюць увагу менш за ўсё. Няхай ваша застаўка на тэлефоне будзе пустым фонам з~пытаньнем, якое павышае вашу прадуктыўнасьць, напрыклад: «Што я зараз зьбіраюся рабіць?», «Навошта я ўзяў тэлефон?», «Што мне зараз трэба?»
+
+\begin{figure}[htb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch13/10.pdf}\bigskip
+
+  \includegraphics[scale=1.5]{willpower/ch13/11.pdf}
+\end{figure}
 
 \infobox{Вядома, ад тэхналёгіяў ня трэба адмаўляцца, нам трэба ўпарадкаваць нашы адносіны з~тэлефонам.}
 
@@ -420,3 +464,10 @@
 2. Дзякуйце і хваліце ў~анляйне, гэта карысна і вам, і таму, каму вы дзякуеце.
 
 3. Практыкуйце як мінімум раз на тыдзень лічбавы дэтокс. Памятайце, што «сапраўднае жыцьцё~--- гэта тое, што адбываецца, пакуль ваш тэлефон выключаны».
+
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.25in}
+  \includegraphics[width=\textwidth]{willpower/ch13/full.pdf}  
+\end{figure}
