--- a/willpower.tex
+++ b/willpower.tex
@@ -14,19 +14,18 @@
 
 \author{Андрусь Белавешкін}
 \title{Воля да жыцьця}
-\date{2020 Пераклад 2022}
+\date{Кіпр, Пафас, 2024}
 
-% \includeonly{willpower/chapter13}
 
 \begin{document}%
 % \CoverPic{willpower/cover.png}
 
 % \cleartooddpage
 \begin{titlingpage}
-  \TitlePageFormat{Андрусь\ \ Белавешкін}
+  \TitlePageFormatBig{Андрусь\ \ Белавешкін}
       {Воля\ \ да\ \ жыцьця}
       {дапаможнік\ \ па\ \ ўсьвядомленным\ \ здароўі}
-      {2019, Пераклад 2024}
+      {Кіпр, Пафас, 2024 \\~\\ (с) Беларусь, Менск, 2019}
 
 \end{titlingpage}
 
