--- a/willpower/chapter1.tex
+++ b/willpower/chapter1.tex
@@ -676,7 +676,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.25in}
   \includegraphics[width=\textwidth]{willpower/ch1/full.pdf}  
-\end{figure}
+\end{figure*}
