--- a/willpower/chapter10.tex
+++ b/willpower/chapter10.tex
@@ -126,7 +126,7 @@
 
 \begin{figure}[htb!]
   \centering
-  \includegraphics[scale=1]{willpower/ch10/4.pdf}
+  \includegraphics[scale=0.9]{willpower/ch10/4.pdf}
 \end{figure}
 
 \subsection*{Пытаньні і заданьні}
@@ -588,7 +588,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0in}
   \includegraphics[width=\textwidth]{willpower/ch10/full.pdf}  
-\end{figure}
+\end{figure*}
