--- a/willpower/chapter11.tex
+++ b/willpower/chapter11.tex
@@ -551,7 +551,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.25in}
   \includegraphics[width=\textwidth]{willpower/ch11/full.pdf}  
-\end{figure}
+\end{figure*}
