--- a/willpower/chapter13.tex
+++ b/willpower/chapter13.tex
@@ -467,7 +467,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.25in}
   \includegraphics[width=\textwidth]{willpower/ch13/full.pdf}  
-\end{figure}
+\end{figure*}
