--- a/willpower/chapter2.tex
+++ b/willpower/chapter2.tex
@@ -30,7 +30,7 @@
 
 \begin{figure}[htb!]
   \centering
-  \includegraphics[scale=1.5]{willpower/ch2/3.pdf}
+  \includegraphics[scale=1.3]{willpower/ch2/3.pdf}
 \end{figure}
 
 \textbf{Напрыклад, у~мовах шматлікіх плямёнаў паляўнічых-зьбіральнікаў нават адсутнічаюць словы, якія абазначаюць бессань, а~падлеткі ніколі не сутыкаліся з~акнэ. Але варта перайсьці на заходні стыль харчаваньня, як тут жа зьяўляюцца высыпаньні.} Гэтыя хваробы дрэнна паддаюцца мэдыкамэнтознаму лячэньню. Сучасная мэдыцына не імкнецца вылечыць дыябэт 2 тыпу або гіпэртэнзію, а~можа толькі «кантраляваць іх». Пры атлусьценьні мэдыкамэнтозны эфэкт вельмі нязначны: напрыклад, за год лячэньня такімі прэпаратамі, як арлістат, страта вагі склала ўсяго 2,9 кг, сібутрамін~--- 4,7 кг. Пры гэтым у~«прэпаратаў ад пахуданьня» ёсьць сур'ёзныя пабочныя эфэкты і сындром адмены. Але ж, проста зьмяніўшы лад жыцьця, чалавек можа спакойна губляць 0,5--1 кг у~тыдзень.
@@ -524,7 +524,7 @@
 
 Паводле гэтай тэорыі за атлусьценьне адказны комплекс генаў, якія забясьпечваюць падтрыманьне і назапашваньне энэргіі пры дэфіцыце харчаваньня.
 
-Пры ладзе жыцьця паляўнічых-зьбіральнікаў даступнасьць ежы часта вар'іравалася. Сэзоны багацьця зьмяняліся голадам~--- так званы цыкль голад--баляваньне. Таму замацоўвалася здольнасьць арганізма назапашваць лішкі ежы і спальваць іх на тле павышэньня актыўнасьці і голаду. 
+Пры ладзе жыцьця паляўнічых-зьбі\-раль\-ні\-каў даступнасьць ежы часта вар'іравалася. Сэзоны багацьця зьмяняліся голадам~--- так званы цыкль голад--баляваньне. Таму замацоўвалася здольнасьць арганізма назапашваць лішкі ежы і спальваць іх на тле павышэньня актыўнасьці і голаду. 
 
 \infobox{Не было лядоўняў, гатовых прадуктаў, службаў дастаўкі, а~здабываць ежу атрымлівалася не заўсёды. Вось і выяўляецца, што нашы продкі заўжды практыкавалі пэрыядычнае галаданьне і не перакусвалі абы-чым.
 Цяпер мы сутыкнуліся з~сытуацыяй, калі ежа даступная пастаянна, але гэтыя мэханізмы па-ранейшаму прымушаюць нас адкладаць «на чорны дзень». Калі раней ва ўмовах дэфіцыту ежы яе лішак дапамагаў нам выжыць, дык цяпер ва ўмовах багатае празьмернасьці нам дапамагае ўмеранасьць.}
@@ -608,7 +608,7 @@
 
 \section{Дэпрэсія}
 
-Дасьледаваньні сярод плямёнаў паляўнічых-зьбіральнікаў, якія літаральна перасьледуюць нас на працягу ўсяго разьдзел, паказалі, што ў~гэтых «дзяцей прыроды» альбо адсутнічае дэпрэсія і яе эквіваленты, альбо назіраюцца адзінкавыя выпадкі. Пры гэтым у~«цывілізаваных» краінах дэпрэсія назіралася ўжо з~антычных часоў. 
+Дасьледаваньні сярод плямёнаў паляў\-ні\-чых-зьбіральнікаў, якія літаральна перасьледуюць нас на працягу ўсяго разьдзел, паказалі, што ў~гэтых «дзяцей прыроды» альбо адсутнічае дэпрэсія і яе эквіваленты, альбо назіраюцца адзінкавыя выпадкі. Пры гэтым у~«цывілізаваных» краінах дэпрэсія назіралася ўжо з~антычных часоў. 
 
 \infobox{Мэлянхолія, іпахондрыя, сплін~--- чым актыўнейшым было жыцьцё, тым часьцей у~людзей выяўляліся станы рознай ступені прыгнечанасьці.}
 
@@ -753,7 +753,7 @@
 
 \emph{Арганізм жанчыны прыстасаваны да таго, каб нараджаць вялікую колькасьць дзяцей і доўга іх гадаваць. Павелічэньне колькасьці мэнструальных цыкляў у~сучасных жанчынаў можа быць зьвязана з~падвышанай рызыкай раку.}
 
-Зьмена гарманальнага балянсу тэстастэрон--эстраген уплывае ня толькі на тое, як выглядаюць жанчыны, але й на тое, як гавораць. Так, за апошнія 50 гадоў мы бачым у~жанчынаў значнае зьніжэньне вышыні голасу~--- з~229 Гц да 206 Гц. Адныя дасьледнікі лічаць, што прычынай зьяўляецца непасрэдна пераразьмеркаваньне ўплыву і ўлады, бо на ўзровень тэстастэрону ўплывае статус і дамінаваньне.
+Зьмена гарманальнага балянсу тэс\-тас\-тэ\-рон--эстраген уплывае ня толькі на тое, як выглядаюць жанчыны, але й на тое, як гавораць. Так, за апошнія 50 гадоў мы бачым у~жанчынаў значнае зьніжэньне вышыні голасу~--- з~229 Гц да 206 Гц. Адныя дасьледнікі лічаць, што прычынай зьяўляецца непасрэдна пераразьмеркаваньне ўплыву і ўлады, бо на ўзровень тэстастэрону ўплывае статус і дамінаваньне.
 
 Каля 25\,\% параў, якія маюць праблемы з~фэртыльнасьцю, атрымліваюць дыягназ «бясплоднасьць нявызначанага генэзу». Ёсьць меркаваньне, што сама меней траціна ўсіх выпадкаў бясплодзьдзя~--- наступства хранічнага стрэсу і дэпрэсіі, прычым ужываньне антыдэпрэсантаў таксама зьяўляецца чыньнікам бясплодзьдзя. А яшчэ вялікі ўклад у~праблему ўносяць і парушэньні харчаваньня.
 
@@ -913,8 +913,8 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
-  \vspace*{-0.35in}
+\begin{figure*}[htb!]
+  \vspace{-0.35in}
   \includegraphics[width=\textwidth]{willpower/ch2/full.pdf}  
-\end{figure}
+\end{figure*}
 
