--- a/willpower/chapter3.tex
+++ b/willpower/chapter3.tex
@@ -889,7 +889,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.5in}
   \includegraphics[width=\textwidth]{willpower/ch3/full.pdf}  
-\end{figure}
+\end{figure*}
