--- a/willpower/chapter4.tex
+++ b/willpower/chapter4.tex
@@ -312,7 +312,7 @@
 \infobox{Падумайце пра харошае, няхай у~роце зьявіцца сьліна~--- гэта значыць, што актыўнасьць стрэсавай сымпатыйнай сыстэмы зьніжаецца, і вы гатовыя да прыёму ежы. Заўсёды памятайце, што ежа~--- гэта сапраўдны дар, які мы прымаем зь любоўю і падзякай, які дае нам сілы жыць і радавацца жыцьцю.}
 
 \subsection*{Правіла павольнай яды}
-Калі я працаваў анэстэзіёлягам-рэаніматолягам, важным навыкам было паесьці вельмі хутка. Гэта ўвайшло ў~звычку, мне складана было потым перавучыцца і пачаць есьці павольна. Затое цяпер павольная дыета~--- slow food~--- мабыць, адзіная з~усіх дыетаў, якую я магу рэкамэндаваць кожнаму без асьцярогаў.
+Калі я працаваў анэстэзіёлягам-рэ\-ані\-ма\-то\-ля\-гам, важным навыкам было паесьці вельмі хутка. Гэта ўвайшло ў~звычку, мне складана было потым перавучыцца і пачаць есьці павольна. Затое цяпер павольная дыета~--- slow food~--- мабыць, адзіная з~усіх дыетаў, якую я магу рэкамэндаваць кожнаму без асьцярогаў.
 
 \emph{Устаноўлена, што хуткая ежа зьвязаная з~рызыкай пераяданьня, атлусьценьня\index{атлусьценьне} і дыябэту\index{дыябэт}. Павольная ежа дазваляе зьесьці менш і пры гэтым адчуваць сябе больш сытым. Паглядзіце па сэкундамэры, зь якой хуткасьцю вы ясьце і ці трэба вам запавольвацца.}
 
@@ -334,7 +334,7 @@
 
 \begin{figure}[ht!]
   \centering
-  \includegraphics[scale=1.5]{willpower/ch4/5.pdf}
+  \includegraphics[scale=1.3]{willpower/ch4/5.pdf}
 \end{figure}
 
 Адным з~выдатных інструмэнтаў павышэньня некалярыйнага задавальненьня зьяўляецца разьвіцьцё смаку. Чым больш характарыстык ежы мы можам назваць, тым больш атрымліваем уражаньняў і стымулаў. Для гэтага трэба пашыраць свой слоўнікавы запас, апісваць смак, выгляд, пах кожнага прадукту, даваць адценьні базавым смакам: салодкае, салёнае, кіслае, горкае, умамі,~--- і іх узаемадзеяньню паміж сабой. Рабіцеся гурманамі!
@@ -1041,8 +1041,8 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.5in}
   \includegraphics[width=\textwidth]{willpower/ch4/full.pdf}  
-\end{figure}
+\end{figure*}
 
