--- a/willpower/chapter5.tex
+++ b/willpower/chapter5.tex
@@ -125,7 +125,7 @@
 
 Навукоўцы апісваюць «офісны трамбоз», «трамбоз вандроўцы», «трамбоз геймэра»: апісаныя неаднаразовыя выпадкі, калі геймэры атрымлівалі гострыя трамбозы ног пры працяглай гульні і паміралі ад ТЭЛА. Спалучэньне нерухомасьці, абязводжваньня і стрэсу (адрэналін узмацняе зьвінаньне крыві) правакуе гэтыя выпадкі. Іншыя прычыны нерухомасьці: пералёты, падарожжы, шпіталізацыі, сядзячая праца. Кожныя дзьве гадзіны за кампутарам звыш мяжы ў~2,5 гадзіны павышаюць рызыку трамбозу лёгачнай артэрыі на 40\,\%.
 
-\textbf{Эвалюцыйна нам патрэбныя розныя спосабы актыўнасьці.} Мы, як нашчадкі паляўнічых-зьбіральнікаў, маем патрэбу ў~працяглай нізкаінтэнсіўнай нагрузцы~--- як зьбіральнікі, і ў~сярэдняй або высокаінтэнсіўнай~--- як паляўнічыя і ваяры. Паляваньне~--- гэта працяглая хада, затым бег (перасьлед здабычы), у~пэўны момант часу набор высокай хуткасьці й магутнасьці.
+\textbf{Эвалюцыйна нам патрэбныя розныя спосабы актыўнасьці.} Мы, як нашчадкі па\-ляў\-ні\-чых-зьбіральнікаў, маем патрэбу ў~працяглай нізкаінтэнсіўнай нагрузцы~--- як зьбіральнікі, і ў~сярэдняй або высокаінтэнсіўнай~--- як паляўнічыя і ваяры. Паляваньне~--- гэта працяглая хада, затым бег (перасьлед здабычы), у~пэўны момант часу набор высокай хуткасьці й магутнасьці.
 
 \infobox{Ідэальнага і прыдатнага для ўсіх спорту няма, але ёсьць камбінацыя розных відаў актыўнасьці, аптымальная для большасьці людзей.}
 
@@ -182,7 +182,7 @@
 
 \emph{Сядзеньне сядзеньню ня роўнае. Назіраючы за сваімі дзецьмі, я заўважаю, што яны актыўна выкарыстоўваюць позу на кукішках, паднімаючы рэчы з~зямлі і разглядаючы казюрак. У эўрапейскай культуры існуе негалоснае табу на сядзеньне на кукішках, лічыцца, што так сядзяць некультурныя ці чужыя людзі. Аднак са старажытных часоў, дзясяткі тысячаў гадоў таму назад, людзі часта сядзелі на кукішках. Рэч у~тым, што пры сталым выкарыстаньні гэтай позы на касьцях утворацца дадатковыя паверхні~--- фасэткі. Таму тым людзям, хто не сядзіць так зь дзяцінства, поза здаецца нязручнай як праз асаблівасьці разьвіцьця шкілета, так і праз скарочанае ахілесава сухажыльле. Напрыклад, у~Японіі больш за 20\,\% маладых людзей ужо ня могуць пратрымацца некалькі хвілінаў у~гэтай позе.}
 
-\emph{Навукоўцы, дасьледуючы лад жыцьця паляўнічых-зьбі\-раль\-ні\-каў хадза, выявілі, што яны даволі шмат сядзяць. Вывучэньне паказала, што з~пункту гледжаньня біямэханікі сядзеньне на кукішках дае нашмат больш высокую статычную нагрузку на цягліцы ног і кора, чым звычайнае сядзеньне, набліжаючыся да хады! Гэта вядзе і да меншых рызыкаў для здароўя. Поза на кукішках можа быць адным з~элемэнтаў дынамічнае позы, разам зь сядзеньнем на крэсьле, з~працай стоячы, працай лежачы. Акрамя таго, так бясьпечней за ўсё паднімаць нешта з~падлогі і нашмат карысьней для здароўя зьдзяйсьняць у~ёй дэфэкацыю. На жаль, некаторым будзе складана яе выкарыстаць з~ужо апісаных анатамічных прычынаў.}
+\emph{Навукоўцы, дасьледуючы лад жыцьця па\-ляў\-ні\-чых-зьбі\-раль\-ні\-каў хадза, выявілі, што яны даволі шмат сядзяць. Вывучэньне паказала, што з~пункту гледжаньня біямэханікі сядзеньне на кукішках дае нашмат больш высокую статычную нагрузку на цягліцы ног і кора, чым звычайнае сядзеньне, набліжаючыся да хады! Гэта вядзе і да меншых рызыкаў для здароўя. Поза на кукішках можа быць адным з~элемэнтаў дынамічнае позы, разам зь сядзеньнем на крэсьле, з~працай стоячы, працай лежачы. Акрамя таго, так бясьпечней за ўсё паднімаць нешта з~падлогі і нашмат карысьней для здароўя зьдзяйсьняць у~ёй дэфэкацыю. На жаль, некаторым будзе складана яе выкарыстаць з~ужо апісаных анатамічных прычынаў.}
 
 \subsection*{Выкарыстоўвайце дынамічную позу}
 
@@ -682,7 +682,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.25in}
   \includegraphics[width=\textwidth]{willpower/ch5/full.pdf}  
-\end{figure}
+\end{figure*}
