--- a/willpower/chapter7.tex
+++ b/willpower/chapter7.tex
@@ -910,7 +910,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.5in}
   \includegraphics[width=0.95\textwidth]{willpower/ch7/full.pdf}  
-\end{figure}
+\end{figure*}
