--- a/willpower/chapter8.tex
+++ b/willpower/chapter8.tex
@@ -159,7 +159,7 @@
 
 \textbf{Увага}~--- гэта ня проста кагнітыўны навык, але й працэс зьмены мозгу. Калі нам нешта цікава, расьце ўзровень дафаміну, актывуюцца працэсы нэўраплястычнасьці, што вядзе да структурнай зьмены мозгу. Чым больш прыцэльную ўвагу вы можаце надаць сваім справам, тым хутчэй у~іх удасканальваецеся. А вось займаючыся гэтым жа, але безуважна, вы ніколі ня зможаце дасягнуць у~гэтай справе дасканаласьці.
 
-\textbf{Практыка ўсьвядомленасьці паляпшае якасьць мысьленьня, дапамагае прапампаваць сацыяльныя, пазнавальныя і эмацыйныя навыкі.} Адбываецца ўзмацненьне кантролю прэфрантальнай кары над мігдалінай, таму мы лягчэй кантралюем эмацыйныя імпульсы, можам назіраць свае эмоцыі, а~ня быць паглынутыя імі, і самі вырашаць, паддавацца імпульсу ці не.
+\textbf{Практыка ўсьвядомленасьці паляпшае й якасьць мысьленьня, дапамагае прапампаваць сацыяльныя, пазнавальныя і эмацыйныя навыкі.} Адбываецца ўзмацненьне кантролю прэфрантальнай кары над мігдалінай, таму мы лягчэй кантралюем эмацыйныя імпульсы, можам назіраць свае эмоцыі, а~ня быць паглынутыя імі, і самі вырашаць, паддавацца імпульсу ці не.
 
 \emph{Як вы памятаеце, пры стрэсе часта адбываецца «крадзеж мозгу», але той, хто практыкуе ўсьвядомленасьць, рэдка страчвае кантроль над сабой.}
 
@@ -865,7 +865,7 @@
 \begin{itemize}
   \item фантазіі пра неўміручасьць: вельмі папулярныя сёньня;
   \item мары пра ўваскрашэньне: сучасная разнавіднасьць~--- крыёніка;
-  \item канцэпцыя несьмяротнай душы: у~большасьці рэлігій;
+  \item канцэпцыя несьмяротнай душы: у большасьці рэлігій;
   \item ідэя культурнай спадчыны: мэцэнаты, фундатары, пісьменьнікі, навукоўцы, паэты~--- стварыць тое, што цябе перажыве.
 \end{itemize}
 
@@ -891,7 +891,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.15in}
   \includegraphics[width=0.95\textwidth]{willpower/ch8/full.pdf}  
-\end{figure}
+\end{figure*}
