--- a/willpower/chapter9.tex
+++ b/willpower/chapter9.tex
@@ -16,7 +16,7 @@
 
 \begin{figure}[htb!]
   \centering
-  \includegraphics[scale=1.5]{willpower/ch9/1.pdf}
+  \includegraphics[scale=1.3]{willpower/ch9/1.pdf}
 \end{figure}
 
 \textbf{Калі ў~вас нізкі сацыяльны статус}, то заўважыць гэта таксама даволі проста. Калі вы гаворыце, вас ня слухаюць і на вас не глядзяць. Вашым меркаваньнем грэбуюць ці забываюць пра вас. Калі вы нешта прапануеце, гэта рэдка сустракае разуменьне і зацікаўленасьць. Іншыя ўспрымаюць вас як пухнатага і бяскрыўднага чалавека, які ня можа нашкодзіць. Вас лёгка замяніць у~калектыве, бо нічога важнага вы ня робіце. У размове вы часьцей гаворыце «я», сфакусаваныя на сваіх унутраных перажываньнях. Зь цяжкасьцю вытрымліваеце позірк, аддаеце перавагу адыходу ад канфліктных сытуацый: лягчэй падпарадкавацца, чым адстойваць свае ідэі. У канфліктнай сытуацыі вам хочацца схавацца, сьціснуцца, схіліць галаву, каб вас не заўважылі. Вы баіцеся ацэньваць, прыслухоўваецеся да думак іншых ды ідзяце ``ў іх на шворцы''. У вас нізкая самаацэнка, вы здаяцеся сабе маленькімі і слабымі, і ёсьць адчуваньне, што навакольныя глядзяць на вас з~падазрэньнем ці няўхвальна. Канфлікты надоўга выбіваюць вас з~каляіны, і вам складана аднавіцца.
@@ -688,7 +688,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.15in}
   \includegraphics[width=\textwidth]{willpower/ch9/full.pdf}  
-\end{figure}
+\end{figure*}
