--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -547,7 +547,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.5in}
   \includegraphics[width=\textwidth]{willpower/ch12/full.pdf}  
-\end{figure}
+\end{figure*}
