--- a/willpower/chapter14.tex
+++ b/willpower/chapter14.tex
@@ -888,7 +888,7 @@
 
 \clearpage
 \thispagestyle{empty}
-\begin{figure}[htb!]
+\begin{figure*}[htb!]
   \vspace*{-0.5in}
   \includegraphics[width=\textwidth]{willpower/ch14/full.pdf}  
-\end{figure}
+\end{figure*}
