--- a/willpower.tex
+++ b/willpower.tex
@@ -22,9 +22,9 @@
 
 % \cleartooddpage
 \begin{titlingpage}
-  \TitlePageFormatBig{Андрусь\ \ Белавешкін}
-      {Воля\ \ да\ \ жыцьця}
-      {дапаможнік\ \ па\ \ ўсьвядомленным\ \ здароўі}
+  \TitlePageFormatBig{Андрусь~~~Белавешкін}
+      {Воля~~~~да~~~~жыцьця}
+      {дапаможнік~~~па\\ўсьвядомленным~~~здароўі}
       {Кіпр, Пафас, 2024 \\~\\ (с) Беларусь, Менск, 2019}
 
 \end{titlingpage}
